--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,30 @@
 @tailwind components;
 @tailwind utilities;
 @import "./assets/fonts/fonts.css";
+
+.inverted-radius {
+  --r: 40px; /* the radius */
+  --s: 50px; /* size of inner curve */
+  --x: 60px; /* horizontal offset (no percentane) */
+  --y: 60px; /* vertical offset (no percentage) */
+
+  width: 100%;
+  height: 508px;
+  aspect-ratio: 1;
+  border-radius: var(--r);
+  --_m: /calc(2 * var(--r)) calc(2 * var(--r)) radial-gradient(#000 70%, #0000
+        72%);
+  --_g: conic-gradient(
+    from 90deg at calc(100% - var(--r)) calc(100% - var(--r)),
+    #0000 25%,
+    #000 0
+  );
+  --_d: (var(--s) + var(--r));
+  mask: calc(100% - var(--_d) - var(--x)) 100% var(--_m),
+    100% calc(100% - var(--_d) - var(--y)) var(--_m),
+    radial-gradient(var(--s) at 100% 100%, #0000 99%, #000 calc(100% + 1px))
+      calc(-1 * var(--r) - var(--x)) calc(-1 * var(--r) - var(--y)),
+    var(--_g) calc(-1 * var(--_d) - var(--x)) 0,
+    var(--_g) 0 calc(-1 * var(--_d) - var(--y));
+  mask-repeat: no-repeat;
+}
